# ROBOTIS-OP2-Common

./: README.md
robotis_op2_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_op2_description/: CMakeLists.txt  package.xml
robotis_op2_description/data/: ID_JointName
robotis_op2_description/launch/: robotis_op2_rviz.launch
robotis_op2_description/rviz/: op.rviz  robotis_op2_ball.rviz
robotis_op2_description/urdf/: robotis_op2.structure.arm.xacro  robotis_op2.structure.head.xacro  robotis_op2.structure.leg.xacro  robotis_op2.urdf.xacro  robotis_op2.visuals.xacro  robotis_op2.visuals_simple.xacro
robotis_op2_gazebo/: CMakeLists.txt  package.xml
robotis_op2_gazebo/config/: position_controller.yaml
robotis_op2_gazebo/launch/: position_controller.launch  robotis_world.launch
