<?xml version="1.0"?>
<package format="2">
  <name>robotis_op2_common</name>
  <version>0.1.0</version>
  <description>
    ROS packages for the ROBOTIS OP2 (meta package).
    This meta package provides launch files and plug-in for Gazebo and RViz.
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_op2_common</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op2/getting_started/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP2-Common</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP2-Common/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotis_op2_description</exec_depend>
  <exec_depend>robotis_op2_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
